[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Enemies/Boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Enemies/NormalBoss.gd" type="Script" id=2]
[ext_resource path="res://Assets/Particles+Misc/light.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CircleShape2D" id=2]
radius = 352.07

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 63.0482, 11 )

[node name="NormalBoss" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="." index="4"]
modulate = Color( 1.5, 0.4, 0.58, 0.15 )
material = SubResource( 1 )
scale = Vector2( 4, 4 )
z_index = -2
texture = ExtResource( 3 )

[node name="BuffRadius" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuffRadius" index="0"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="6"]
position = Vector2( 0, -60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( -25, 46 )
rotation = -1.1013
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D" index="1"]
position = Vector2( 26, 46 )
rotation = 1.0472
shape = SubResource( 3 )

[connection signal="body_entered" from="BuffRadius" to="." method="_on_BuffRadius_body_entered"]
[connection signal="body_exited" from="BuffRadius" to="." method="_on_BuffRadius_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="Trails"]
